--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
  - RACKET_VERSION=5.3.5
 
 before_install:
- - curl -L https://github.com/greghendershott/travis-racket/releases/v0.1/1886/install-racket.sh | sh
+ - curl -L https://github.com/greghendershott/travis-racket/releases/download/v0.6/install-racket.sh | sh
  - sudo apt-get update
 
 script:
